bypass aegis for signal/hybrid
